@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree editable="1" on_write="on_write">
+<tree editable="1" on_write="on_written">
     <field name="company" expand="1" optional="1"/>
     <field name="move"/>
     <field name="move_origin" expand="1" optional="1"/>
