@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form on_write="on_write">
+<form on_write="on_written">
     <label name="name"/>
     <field name="name"/>
     <label name="version"/>
