@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree on_write="on_write">
+<tree on_write="on_written">
     <field name="name" expand="1"/>
     <field name="version" optional="1"/>
     <field name="state"/>
